correccion de felicitar

--- a/app/views/articulos/index.html.erb
+++ b/app/views/articulos/index.html.erb
@@ -33,7 +33,7 @@
     <td><%= articulo.comentarios.size %></td>
     <td><%= link_to 'Show', articulo %></td>
     <td><%= link_to 'Edit', edit_articulo_path(articulo) %></td>
-    <td><%= link_to 'Destroy', articulo, confirm: 'Are you sure?', method: :delete %></td>
+   <!-- <td><%= link_to 'Destroy', articulo, confirm: 'Are you sure?', method: :delete %></td>-->
   </tr>
 <% end %>
 </table>
