cambios en sugerencia

--- a/app/views/articulos/show.html.erb
+++ b/app/views/articulos/show.html.erb
@@ -22,6 +22,6 @@
 </p>
 
 <p>
-<%= link_to 'Edit', edit_articulo_path(@articulo) %> |
-<%= link_to 'Back', articulos_path %>
+<%= link_to 'Editar', edit_articulo_path(@articulo) %> |
+<%= link_to 'Regresar', articulos_path %>
 </p>
