--- a/app/views/articulos/new.html.erb
+++ b/app/views/articulos/new.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="large-12 columns">
   	
-<h1>New articulo</h1>
+<h1>Nueva sugerencia</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', articulos_path %>
+<%= link_to 'Regresar', articulos_path %>
 </div>
 </div>
